[package]
name = "metrics-exporter-statsd"
version = "0.1.0"
license = "MIT"
authors = ["Floris Bruynooghe <flub@sentry.io>"]
repository = "https://github.com/getsentry/metrics-exporter-statsd"
readme = "README.md"
description = "A statsd exporter for metrics-rs"
edition = "2018"

[dependencies]
bytes = "0.5.6"
metrics = "0.13.0-alpha.3"
metrics-util = "0.4.0-alpha.2"
serde_json = "1"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
rand = "0.7"
